<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_lobby_activity"
    android:padding="@dimen/space_lg">

    <TextView
        android:id="@+id/lobbyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lobby_title"
        android:textColor="@color/game_text_primary"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lobbySubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:text="@string/lobby_waiting"
        android:textColor="@color/game_text_secondary"
        android:textSize="@dimen/body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lobbyTitle" />

    <LinearLayout
        android:id="@+id/playersContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_lg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/startGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lobbySubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startGameButton"
        style="@style/Widget.GiocoDel15.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
